# practice-landing-page

./: .coverage  .dockerignore  .env.example  .env.production.template  .env.staging.template  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROGRESS.md  README.dev.md  cc_session_64340711-7566-4a73-90cc-a77578bc39ba.txt  docker-compose.test.yml  firebase.json  nginx.test.conf  pyproject.toml  walking-skeleton.md
.claude/commands/: documentation-guide.md  extract_information.md  link_session_file.md  respond_with_references.md  response-guide.md
.github/: DEPLOYMENT.md
.github/workflows/: cd.yml  ci.yml  deploy-production.yml  deploy-staging.yml
alembic/: env.py
alembic/versions/: e70b3e58a7df_initial_schema.py
backend/: .dockerignore  .gitignore  Dockerfile  cloudbuild.yaml  example_bad_code.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d4530c5b84d5_create_orders_and_email_logs_tables.py
backend/api/: admin.py  orders.py  webhooks.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: orders.py
backend/app/services/: email_service.py  order_service.py
backend/db/: base.py  seed.py
backend/models/: __init__.py  order.py  product.py
backend/models/db/: __init__.py  order.py  product.py  shipment.py
backend/services/: __init__.py  email.py  shipment_service.py
backend/services/payment/: __init__.py  payment_service.py  paypal_adapter.py
backend/templates/admin/: shipments.html
backend/templates/email/: order_confirmation.html
backend/tests/e2e/: conftest.py  test_walking_skeleton.py  test_walking_skeleton_real_api.py
backend/utils/: encryption.py
concetp_sherpa/: generate_references.py
concetp_sherpa/src/: __init__.py
cosmetics_landing/: .env.example  README.md  pyproject.toml
cosmetics_landing/src/cosmetics_landing/adapter/in_/web/: affiliate_controller.py  inquiry_controller.py  order_controller.py
cosmetics_landing/src/cosmetics_landing/adapter/in_/web/dto/: order_request.py
cosmetics_landing/src/cosmetics_landing/application/: exceptions.py
cosmetics_landing/src/cosmetics_landing/application/port/in_/: get_affiliate_stats_query.py  place_order_use_case.py  send_inquiry_use_case.py  track_affiliate_command.py
cosmetics_landing/src/cosmetics_landing/application/service/: get_affiliate_stats_service.py  place_order_service.py  send_inquiry_service.py  track_affiliate_service.py
cosmetics_landing/src/cosmetics_landing/config/: dependencies.py  main.py  settings.py
cosmetics_landing/src/cosmetics_landing/domain/: affiliate.py  commission.py  email.py  order.py
cosmetics_landing/templates/: landing.html
cosmetics_landing/tests/: conftest.py
cosmetics_landing/tests/integration/adapter/: __init__.py  test_gmail_smtp_adapter.py  test_google_places_adapter.py  test_paypal_adapter.py  test_sqlalchemy_order_adapter.py
cosmetics_landing/tests/integration/end_to_end/: test_affiliate_tracking_e2e.py  test_customer_inquiry_e2e.py  test_order_form_ui.py  test_place_order_e2e.py
cosmetics_landing/tests/learning/: __init__.py  test_google_geocoding_contract.py  test_paypal_contract.py
cosmetics_landing/tests/unit/adapter/: test_fake_address_validator_contract.py  test_fake_email_adapter.py  test_fake_payment_contract.py
cosmetics_landing/tests/unit/application/: test_place_order_service.py  test_send_inquiry_service.py
cosmetics_landing/tests/unit/domain/: test_affiliate.py  test_commission.py  test_order.py
docs/: 00-preparation.md  01-overview.md  02-database-schema.md  03-product-info.md  04-state-management.md  05-business-logic.md  06-error-handling.md  07-data-validation.md  08-pages.md  09-ui-ux.md  10-project-structure.md  11-methodology.md  12-implementation.md  13-environment.md  14-local-dev.md  15-deployment.md  16-performance.md  17-email-templates.md  18-webhook-signature-verification.md  IMPLEMENTATION-PLAN.md  MVP-REQUIREMENTS.md  OUTSIDE-IN-TDD-GUIDE.md  epic-overview.md  index.md  next-session-handoff.md  next-step-plan.md  outside-in-tdd-guide.md  outside-in-tdd-workflow.md  phase2-implementation-plan.md  project-plan.md  pytest-project-structure-best-practices.md  testing-taxonomies-25-11-05-1022.md  testing-taxonomies-goos-content.md  testing-taxonomies-goos.md
docs/architecture/: system_architecture--25-11-01.md
docs/guides/: doc-modification-guide.md  doc-version-management.md  knowledge-query-system.md
docs/inbox/: CONTEXT-DECISION-PROCESS.md  MVP-REQUIREMENTS.md  cc_imple_guide_25-10-06.md  concept_tdd.md  doc-modification-guide--25-10-28-2109.md  doc_modification_guide--25-10-28.md  epic-overview--25-10-17.md  epics_and_stories.md  guide_tdd_application_v3.md  imple_guide_v2.md  prd_cosmetics_mvp--25-10-13.md  prd_cosmetics_mvp.md  project-plan-11-07-1519.md  tdd_guide.md
docs/landing_page/: concept_tdd_best_practices.md  concept_tdd_part2.md  cx_imple_guide_25-10-07.md  dev_plan_25-10-06.md  epic-overview.md  eval_arch_imple_guide_v2.md  eval_tdd_application_v1.md  eval_tdd_guide.md  eval_tdd_imple_guide_v2.md  guide_detailed_design_v1.md  guide_folder_structure_v1.md  guide_project_overview_v1.md  guide_tdd_application_v1.md  guide_tdd_application_v3.md  imple_guide_v3.md  index.md
docs/prd/: cosmetics_landing_mvp.md
docs/templates/: epic-overview.md  epic.md  prd.md
frontend/: index.html  order-check.html  order-confirmation.html
frontend/css/: style.css
frontend/js/: main.js
records/ai-sessions/: 84b0b39b-8484-471e-87a1-bd830420166b.txt  b22da9da-02c7-4ff7-84bd-62dd9d8efdc1.txt  b2a7ca67-f9cd-4998-a6e1-e93eec7ac5b3.txt  b470231c-6a40-4746-8c20-7ba05b0cc7d0.txt  ca885d92-73b9-4218-a148-ba1288a49287.txt  cc_session_bf132ef3-d7d2-4eee-813c-aeadf30c88e0.txt  ddc50ae1-4ed9-4853-b3f0-3572d1d8c2ba.txt
records/notes/: observation-note.md  (+2 more)
scripts/: check-env-sync.sh  deploy-backend.sh  deploy-frontend.sh  dev.sh  inject-env-local.sh  lint.sh  smoke-test.sh  test-docker.sh  test-staging.sh  validate-env-file.sh  validate-github-secrets.sh  validate-secrets.sh  verify-env.sh
tests/: conftest.py
(+1956 files in other folders)
