[project]
name = "v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "google-generativeai>=0.8.5",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "selenium>=4.36.0",
    "webdriver-manager>=4.0.2",
]
