[project]
name = "kbeauty-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "email-validator>=2.3.0",
    "fastapi>=0.121.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "playwright>=1.56.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.1",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end tests",
    "slow: Slow tests that use real external APIs (deselect with '-m \"not slow\"')",
]
